src/main/resources/Krakatau-master/tests/assembler/bad/lbloutsidecode.j
.class public 'Boo!'
.super java/lang/Object

        .linenumbertable
            L0 33
            L4 108
        .end linenumbertable

.end class